--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8]
-    timeout-minutes: 5
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v2
@@ -36,6 +36,8 @@ jobs:
       - name: Run Deliverable 1 code
         run: |
           python Task1A.py
+          python Task1B.py
+          python Task1C.py
           python Task1D.py
           python Task1E.py
           python Task1F.py
@@ -44,4 +46,6 @@ jobs:
         run: |
           python Task2A.py
           python Task2D.py
+          python Task2E.py
+          python Task2F.py
           
